<resources>
    <string name="app_name">Ignite</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="enter_a_subreddit">Enter a subreddit</string>
    <string name="favourite_tags">Favourite Tags</string>
    <string name="you_haven_t_added_any_favourite_tags_yet">You haven\'t added any favourite tags yet</string>
    <string name="tap_the_button_to_get_started">Tap the + button to get started</string>
    <string name="r">r/</string>
    <string name="new_tag">Add a New Tag</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="save_subreddit">Save Subreddit</string>
    <string name="subreddit_saved">Subreddit Saved</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_entered_subreddit_name">No subreddit has been entered!</string>
    <string name="my_subreddits">My Subreddits</string>
    <string name="home">Home</string>
</resources>
